--- a/index.html
+++ b/index.html
@@ -8,5 +8,6 @@ title: My Jeckyl Site
 {% include how.html %}
 {% include featured.html %}
 {% include partner.html %}
+{% include team.html %}
 {% include contact.html %}
 {% include footer.html %}
